--- a/express_helloworld/package.json
+++ b/express_helloworld/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.18.2"
+    "detect-browser": "^5.3.0",
+    "express": "^4.18.2",
+    "express-useragent": "^1.0.15"
   }
 }
