--- a/books/package.json
+++ b/books/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "request_tasks",
+  "name": "books",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,12 +8,12 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
+    "node": "^20.1.0",
     "nodemon": "^2.0.22"
   }
 }
